Local File COmmit

--- a/public/src/template/signin.html
+++ b/public/src/template/signin.html
@@ -1,4 +1,4 @@
-<div class="center-block w-xxl w-auto-xs p-v-md" ng-controller="LoginController">
+<div class="center-block w-xxl w-auto-xs p-v-md" ng-controller="LoginController as loginCtrl">
   <div class="navbar">
     <div class="navbar-brand m-t-lg text-center">
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve" style="
