--- a/public/src/template/lockme.html
+++ b/public/src/template/lockme.html
@@ -1,8 +1,8 @@
-<div class="modal-over indigo" ng-controller="LockMeController">
+<div class="modal-over indigo" ng-controller="LockMeController as lockmeCtrl">
   <div class="modal-center text-center animated fadeInUp" style="width:240px;margin:-120px 0 0 -120px;">
     <div class="m-b">
       <img src="src/images/a0.jpg" class="w-64 circle">
-      <div class="m-t-md font-bold">David M.</div>
+      <div class="m-t-md font-bold">Sushant Singh.</div>
     </div>
     <div class="md-form-group">
     	<input type="password" class="md-input text-center">
