--- a/public/src/template/signup.html
+++ b/public/src/template/signup.html
@@ -22,11 +22,11 @@
         <label>Name</label>
       </div>
       <div class="md-form-group">
-        <input type="email" class="md-input" ng-model="signupCtrl.email" required>
+        <input type="email" class="md-input" ng-model="signupCtrl.userEmail" required>
         <label>Email</label>
       </div>
       <div class="md-form-group">
-        <input type="password" class="md-input" ng-model="signupCtrl.password" required>
+        <input type="password" class="md-input" ng-model="signupCtrl.userPassword" required>
         <label>Password</label>
       </div>
     <!--  <div class="md-form-group">
