--- a/public/src/template/content.html
+++ b/public/src/template/content.html
@@ -1,6 +1,6 @@
 <div class="box">
   <!-- Content Navbar -->
-  <div class="navbar md-whiteframe-z1 no-radius" ng-class="$state.current.data.theme ? $state.current.data.theme.primary : app.setting.theme.primary">
+  <div class="navbar md-whiteframe-z1 no-radius" ng-class="$state.current.data.theme ? $state.current.data.theme.primary : app.setting.theme.primary" id="nav-bar">
     <!-- Open side - Naviation on mobile -->
     <a md-ink-ripple ng-click="openAside()" ng-hide="$state.current.data.child" class="navbar-item pull-left visible-xs visible-sm"><i class="mdi-navigation-menu i-24"></i></a>
     <!-- / -->
@@ -14,12 +14,12 @@
     <ul class="nav nav-sm navbar-tool pull-right" ng-hide="$state.current.data.child">
       <li>
         <a md-ink-ripple ng-click="app.search.show = true">
-          <i class="mdi-action-search i-24"></i>
+
         </a>
       </li>
       <li>
         <a md-ink-ripple data-toggle="modal" data-target="#user">
-          <i class="mdi-social-person-outline i-24"></i>
+          <i class="mdi-image-remove-red-eye i-24"></i>
         </a>
       </li>
       <li class="dropdown">
@@ -27,33 +27,14 @@
           <i class="mdi-navigation-more-vert i-24"></i>
         </a>
         <ul class="dropdown-menu dropdown-menu-scale pull-right pull-up text-color">
-          <li><a href>Single-column view</a></li>
-          <li><a href>Sort by date</a></li>
-          <li><a href>Sort by name</a></li>
+          <li><a href>View profile</a></li>
           <li class="divider"></li>
-          <li><a href>Help &amp; feedback</a></li>
+          <li><a href>Logout</a></li>
         </ul>
       </li>
     </ul>
-    <div class="pull-right" ui-view="navbar@"></div>
-    <!-- / -->
-    <!-- Search form -->
-    <div id="search" class="pos-abt w-full h-full" ng-show="app.search.show" ng-class="$state.current.data.theme ? $state.current.data.theme.primary : app.setting.theme.primary">
-      <div class="box">
-        <div class="box-col w-56 text-center">
-          <!-- hide search form -->
-          <a md-ink-ripple class="navbar-item inline" ng-click="app.search.show=false; app.search.content=''"><i class="mdi-navigation-arrow-back i-24"></i></a>
-        </div>
-        <div class="box-col v-m">
-          <!-- bind to app.search.content -->
-          <input class="form-control input-lg no-bg no-border" placeholder="Search" ng-model="app.search.content">
-        </div>
-        <div class="box-col w-56 text-center">
-          <a md-ink-ripple class="navbar-item inline"><i class="mdi-av-mic i-24"></i></a>
-        </div>
-      </div>
-    </div>
-    <!-- / -->
+
+
   </div>
   <!-- Content -->
   <div class="box-row">
