--- a/public/src/template/dashboard.html
+++ b/public/src/template/dashboard.html
@@ -5,4 +5,54 @@
             <p class="writer">Margaret Atwood</p>
         </div>
     </div>
+
+    <md-content class="md-padding" layout-xs="column" layout="row" id="card-platform">
+        <div flex-xs flex-gt-xs="40" layout="column">
+            <md-card md-theme="{{ showDarkTheme ? 'dark-blue' : 'default' }}" md-theme-watch id="card">
+                <div></div>
+                <md-card-content >
+                    <p>
+                        The titles of Washed Out's breakthrough song and the first single from Paracosm share the
+                        two most important words in Ernest Greene's musical language: feel it. It's a simple request, as well...
+                    </p>
+                </md-card-content>
+
+                <md-card-actions layout="row" layout-align="end center">
+                    <md-button class="md-icon-button" aria-label="Favorite" id="favorite">
+                        <md-icon md-font-set="md">favorite</md-icon>
+                    </md-button>
+                    <md-button class="md-icon-button" aria-label="Settings">
+                        <md-icon md-font-set="md">menu</md-icon>
+                    </md-button>
+                    <md-button class="md-icon-button" aria-label="Share">
+                        <md-icon md-font-set="md">share-arrow</md-icon>
+                    </md-button>
+                </md-card-actions>
+            </md-card>
+        </div>
+  </md-content>
+    <!--<div class="row">
+        <div class="col-sm-6">
+            <md-card md-theme="{{ showDarkTheme ? 'dark-blue' : 'default' }}" md-theme-watch id="card">
+                <md-card-content>
+                    <p>
+                        The titles of Washed Out's breakthrough song and the first single from Paracosm share the
+                        two most important words in Ernest Greene's musical language: feel it. It's a simple request, as well...
+                    </p>
+                </md-card-content>
+                <md-card-actions layout="row" layout-align="end center">
+                    <md-button class="md-icon-button" aria-label="Favorite" id="favorite">
+                        <md-icon md-font-set="md">favorite</md-icon>
+                    </md-button>
+                    <md-button class="md-icon-button" aria-label="Settings">
+                        <md-icon md-font-set="md">menu</md-icon>
+                    </md-button>
+                    <md-button class="md-icon-button" aria-label="Share">
+                        <md-icon md-font-set="md">share-arrow</md-icon>
+                    </md-button>
+                </md-card-actions>
+            </md-card>
+        </div>
+    </div> -->
+
 </div>
