Dashboard ribble effect

--- a/public/src/styles/style.css
+++ b/public/src/styles/style.css
@@ -56,7 +56,7 @@ ul {
     width: 450px;
 }
 .oddflex {
-    margin-left:70px ;
+    margin-left:85px ;
 }
 .evenflex {
     margin-right:10px ;
@@ -133,23 +133,6 @@ span {
   }
 }
 
-.fabSpeedDialdemoBasicUsage .text-capitalize {
-  text-transform: capitalize; }
-
-.fabSpeedDialdemoBasicUsage .md-fab:hover, .fabSpeedDialdemoBasicUsage .md-fab.md-focused {
-  background-color: #000 !important; }
-
-.fabSpeedDialdemoBasicUsage p.note {
-  font-size: 1.2rem; }
-
-.fabSpeedDialdemoBasicUsage .lock-size {
-  min-width: 300px;
-  min-height: 300px;
-  width: 300px;
-  height: 300px;
-  margin-left: auto;
-  margin-right: auto
-}
 #fab {
    position: fixed;
    bottom: 0;
@@ -157,5 +140,8 @@ span {
    left:0;
 }
 #fab-button {
-    background-color: rgba(0, 0, 0, 0.54);
+    background-color: rgba(255, 102, 134, 0.80);
+}
+#icon {
+    margin-left: 5px;
 }
